--- a/nodeJs/package.json
+++ b/nodeJs/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "http-proxy-middleware": "^0.17.3"
   },
   "devDependencies": {
-    
   }
 }
